# xml-visual-editor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: CMakeLists.txt
cli/src/: validate_main.cpp
core/: CMakeLists.txt
core/include/xmlvisualeditor/: export.h  version.h
core/include/xmlvisualeditor/core/: document.h
core/include/xmlvisualeditor/jsonrpc/: jsonrpc_server.h  jsonrpc_types.h  method_handlers.h
core/include/xmlvisualeditor/schema/: schema_parser.h  schema_types.h  schema_validator.h
core/include/xmlvisualeditor/services/: document_service.h  document_service_impl.h  file_service.h  file_service_impl.h  grid_view_service.h  grid_view_service_impl.h  helper_data_service.h  helper_data_service_impl.h  schema_service.h  schema_service_impl.h  service_container.h  validation_service.h  validation_service_impl.h
core/src/: engine_main.cpp  version.cpp
core/src/core/: document.cpp
core/src/jsonrpc/: grid_view_handlers.cpp  helper_handlers.cpp  jsonrpc_server.cpp  jsonrpc_types.cpp  method_handlers.cpp  schema_handlers.cpp
core/src/schema/: schema_parser.cpp  schema_parser_compositor.cpp  schema_parser_queries.cpp  schema_parser_types.cpp  schema_validator.cpp  schema_validator_content.cpp  schema_validator_value.cpp
core/src/services/: document_service.cpp  file_service.cpp  grid_view_service.cpp  helper_data_navigation.h  helper_data_service.cpp  helper_data_service_insert.cpp  helper_data_service_insert_element.cpp  helper_data_service_tree.cpp  helper_data_service_tree.h  schema_service.cpp  service_container.cpp  validation_service.cpp
core/tests/: bench_grid_view_main.cpp
core/tests/unit/: test_document.cpp  test_document_formatting.cpp  test_element_expansion.cpp  test_fixture_helpers.h  test_grid_view_b1_fixture.cpp  test_grid_view_comments.cpp  test_grid_view_hybrid_candidacy.cpp  test_grid_view_json_writer.cpp  test_grid_view_perf.cpp  test_grid_view_tree_build.cpp  test_helper_data_cardinality.cpp  test_helper_data_fixtures.h  test_helper_data_insert.cpp  test_helper_data_service.cpp  test_helper_data_service_elements_panel.cpp  test_helper_data_service_insert_required_children.cpp  test_helper_data_tree.cpp  test_jsonrpc_server.cpp  test_jsonrpc_types.cpp  test_placeholder.cpp  test_schema_include.cpp.bak  test_schema_parser.cpp  test_schema_parser_annotations_wildcards.cpp  test_schema_parser_basic_types.cpp  test_schema_parser_group_refs.cpp  test_schema_service.cpp  test_schema_types.cpp  test_schema_validator.cpp  test_schema_validator_basic.cpp  test_schema_validator_choice_cardinality.cpp  test_schema_validator_choice_satisfaction.cpp  test_schema_validator_complex_group_composition.cpp  test_schema_validator_maxoccurs_regressions.cpp  test_schema_validator_optional_choice_min_occurs.cpp  test_schema_validator_regression2.cpp  test_schema_validator_regression3.cpp  test_schema_validator_regression4.cpp  test_schema_validator_type_resolution.cpp  test_schema_validator_unbounded_groups.cpp  test_schema_wildcard.cpp  (+1 more)
docs/: ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md
notepad-plus-plus/: CMakeLists.txt
notepad-plus-plus/src/: plugin_main.cpp
scripts/: check-annotations.ps1  package-vsix.ps1  package-vsix.sh  quality_check.ps1  quality_check.sh
vscode-extension/: .eslintrc.json  .vscodeignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/commands/: element-insertion-commands.ts  formatting-commands.ts  xml-commands.ts
vscode-extension/src/engine/: engine-client.ts  types.ts
vscode-extension/src/extension/: document-handlers.ts
vscode-extension/src/grid-view/: grid-view-panel.ts  grid-view-types.ts
vscode-extension/src/grid-view/model/: collect-renderable-ids.ts  compute-fingerprints.ts  grid-model.ts  grid-node.ts  grid-selection-axis.ts  grid-selection-columns.ts  grid-selection-entry.ts  grid-selection-reconcile.ts  grid-selection-top-level.ts  grid-selection.ts  toggle-state.ts
vscode-extension/src/grid-view/scripts/: batch-expand-helpers.ts  grid-view-webview-script.ts  mouse-bindings-controller.ts  mouse-bindings-webview-js.ts  mouse-bindings-webview-selection-js.ts  pick-innermost-webview-js.ts
vscode-extension/src/grid-view/styles/: grid-css.ts  grid-layout.css  grid-theme.ts
vscode-extension/src/grid-view/view/: compute-grid-cols.ts  emit-cell-selection.ts  emit-comment-row.ts  emit-hybrid-helpers.ts  emit-off-icon-inject.ts  emit-table-region-hybrid.ts  emit-table-region.ts  emit-toggle-icons.ts  grid-renderer.ts  group-table-runs.ts
vscode-extension/src/panels/: attributes-panel.ts  elements-cursor-utils.ts  elements-panel.ts  info-panel.ts  xml-actions-provider.ts
vscode-extension/src/providers/: completion-helpers.ts  completion-resolve.ts  xml-completion-context.ts  xml-completion-provider.ts  xml-completion-types.ts  xml-fix-provider.ts
vscode-extension/src/services/: cursor-tracking-service.ts  editor-operations.ts  gutter-decoration-service.ts  insert-required-operations.ts  schema-service.ts  tag-autoclose.ts  validation-service.ts
vscode-extension/src/shared/: panel-utils.ts  schema-table-renderer.ts  schema-table-scripts.ts  schema-table-styles.ts
vscode-extension/src/test/: runTest.ts
vscode-extension/src/test/grid-view/: collect-renderable-ids.test.ts  emit-table-region-flip.test.ts  grid-b1-fixture-integration.test.ts  grid-column-paint-data-cells.test.ts  grid-inner-nested-table-run.test.ts  grid-model.test.ts  grid-multirun-toggle-scope.test.ts  grid-node.test.ts  grid-renderer-aria.test.ts  grid-renderer-comment-rows.test.ts  grid-renderer-comments.test.ts  grid-renderer-drilldown-nested-hybrid-table.test.ts  grid-renderer-flat.test.ts  (+30 more)
vscode-extension/src/utils/: cursor-reposition.ts  xml-cursor-helpers.ts  xml-cursor-parser.ts  xml-cursor-range.ts
(+38 files in other folders)
